# backend/src/main/java/com/recruita/api/api/controller/MatchController.java
@@ -24,12 +24,6 @@ public class MatchController implements MatchApi {
   }
 
   @Override
-  public ResponseEntity<Void> invalidateMatchCache() {
-    matchApplicationService.invalidateMatchCache();
-    return ResponseEntity.noContent().build();
-  }
-
-  @Override
   public ResponseEntity<MatchResponseDto> match(MatchRequestDto request) {
     return ResponseEntity.ok(matchApplicationService.evaluate(request));
   }
