# backend/src/main/java/com/recruita/api/match/service/DefaultMatchApplicationService.java
@@ -53,9 +53,4 @@ public class DefaultMatchApplicationService implements MatchApplicationService {
     responseCache.put(request, normalized, result);
     return responseNormalizer.toResponseDto(result);
   }
-
-  @Override
-  public void invalidateMatchCache() {
-    responseCache.invalidateAll();
-  }
 }
